--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <link rel="icon" href="@Url.Content("~/Content/Customer/images/logo-mobile.jpg")" type="image/gif" sizes="16x16">
+    <link rel="icon" href="@Url.Content("~/Content/Customer/images/logo-mobile.png")" type="image/gif" sizes="16x16">
 
 </head>
 <body>
@@ -28,7 +28,7 @@
                                     <div id="logo">
                                         <a href="@Url.Action("Index", "Home")">
                                             <img class="logo-main" src="@Url.Content("~/Content/Customer/images/logo.png")" alt="">
-                                            <img class="logo-mobile" src="@Url.Content("~/Content/Customer/images/logo-mobile.jpg")" alt="">
+                                            <img class="logo-mobile" src="@Url.Content("~/Content/Customer/images/logo-mobile.png")" alt="">
                                         </a>
                                     </div>
                                     <!-- logo close -->
