done for us 3.2

--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                                         </ul>
                                     </li>
                                     <li class=" text-white">
-                                        <a class="menu-item" href="#cultural-events">Culture Events</a>
+                                        <a class="menu-item" href="@Url.Action("Index", "Home")#cultural-events">Culture Events</a>
                                     </li>
 
                                 </ul>
