--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TP03MainProj.Models.Events>
+﻿﻿@model IEnumerable<TP03MainProj.Models.Events>
 
 @{
     ViewBag.Title = "Index";
@@ -14,10 +14,10 @@
     -->
 
 
-<section class="vh-100 d-flex align-items-center">
+<section>
     <div class="container">
         <!--calendar-->
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-items-center">
             <div class="col-lg-8 col-md-10 text-center">
                 @{
                     var cultureColour = "";
@@ -53,7 +53,7 @@
         <!--events list-->
         <div class="row justify-content-center align-items-center mt-3">
             <div class="col-lg-8 col-md-10 text-center">
-                <div class="" id="events-list"></div>
+                <div id="events-list"></div>
             </div>
         </div>
     </div>
@@ -72,9 +72,7 @@
 
     <style>
 
-        #events-list {
-            margin-bottom: 100px;
-        }
+
         #calendar {
             width: 150%;
             max-width: 900px;
