--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -10,8 +10,10 @@
         <div class="row">
             <div class="col-lg-8">
                 <ul class="crumb mb-3" id="">
-                    <li style="font-size: large; color: rgba(0, 0, 0, 0.5)"><a href="@Url.Action("Index", "Home")">Home</a></li>
-                    <li style="font-size: large;" class="active"><a href="@Url.Action("Index", "Education")">Education Center</a></li>
+                    <li style="font-size: large;" class="text-dark"><a href="@Url.Action("Index", "Home")">Home</a></li>
+                    <li style="font-size: large;" class="text-dark ms-2 me-2">></li>
+                    <li style="font-size: large;" class="active text-dark"><a href="@Url.Action("Index", "Education")">Education Center</a></li>
+                    <li style="font-size: large;" class="text-dark ms-2 me-2">></li>
                     <li style="font-size: large; color: #d48810 " class="active">Diverse Cultures</li>
                 </ul>
                 <h2 class="wow fadeInUp mt-3 mb-2" data-wow-delay=".2s">Please Choose</h2>
