--- a/TP03MainProj/Views/Education/Index.cshtml
+++ b/TP03MainProj/Views/Education/Index.cshtml
@@ -30,8 +30,8 @@
                             <div class="col-lg-8 offset-lg-2 ">
                                 <h2 class="wow fadeInUp mb20" data-wow-delay=".2s">Embark on a Journey of Cultural Discovery</h2>
                                 <ul class="crumb" id="education-nav">
-                                    <li style="font-size: large;" class="text-dark">
-                                        <a href="@Url.Action("Index", "Home")">Home</a>
+                                    <li style="font-size: large;" >
+                                        <a class="text-dark" href="@Url.Action("Index", "Home")">Home</a>
                                     </li>
                                     <li style="font-size: large;" class="text-dark ms-2 me-2">></li>
                                     <li style="font-size: large; color: #d48810 " class="active">Education Center</li>
