--- a/TP03MainProj/Views/Education/MigrationStories.cshtml
+++ b/TP03MainProj/Views/Education/MigrationStories.cshtml
@@ -9,9 +9,9 @@
         <div class="row">
             <div class="col-lg-8">
                 <ul class="crumb mb-3" id="">
-                    <li style="font-size: large;" class="text-dark"><a href="@Url.Action("Index", "Home")">Home</a></li>
+                    <li style="font-size: large;" class="text-dark"><a class="text-dark" href="@Url.Action("Index", "Home")">Home</a></li>
                     <li style="font-size: large;" class="text-dark ms-2 me-2">></li>
-                    <li style="font-size: large;" class="active text-dark"><a href="@Url.Action("Index", "Education")">Education Center</a></li>
+                    <li style="font-size: large;" class="active"><a class="text-dark" href="@Url.Action("Index", "Education")">Education Center</a></li>
                     <li style="font-size: large;" class="text-dark ms-2 me-2">></li>
                     <li style="font-size: large; color: #d48810 " class="active">MigrationStories</li>
                 </ul>
