--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - CultMelbourne</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -82,7 +82,7 @@
                         <div class="row">
                             <div class="col-lg-6 col-sm-6">
                                 <div class="widget">
-                                    <h5>Company</h5>
+                                    <h5>CultMelbourne</h5>
                                     <ul>
                                         <li><a href="@Url.Action("Index", "Home")">Home</a></li>
                                         <li><a href="@Url.Action("Index", "Education")">Education</a></li>
@@ -112,7 +112,7 @@
                                 <img src="@Url.Content("~/Content/Customer/images/svg/phone-svgrepo-com-white.svg")" class="" alt="">
                                 <div class="d-text">
                                     <h4>Phone</h4>
-                                    +123-234-3456
+                                    +61-1234567
                                 </div>
                             </div>
 
@@ -121,7 +121,7 @@
 
                                 <div class="d-text">
                                     <h4>Email</h4>
-                                    hallo@madebydesignesia.com
+                                    hello@cultmelbourne.com
                                 </div>
                             </div>
 
