--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿﻿@model IEnumerable<TP03MainProj.Models.Events>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Events Calendar";
     //Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
