--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -6,9 +6,19 @@
     <title>@ViewBag.Title - CultMelbourne</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @*@Styles.Render("~/bundles/customerFontsAndStyles")*@
 
     <link rel="icon" href="@Url.Content("~/Content/Customer/images/logo-mobile.png")" type="image/gif" sizes="16x16">
 
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+
+    <link href="@Url.Content("~/Content/Customer/fonts/fontawesome4/css/font-awesome.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Customer/fonts/fontawesome6/css/fontawesome.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Customer/fonts/fontawesome6/css/brands.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Customer/fonts/fontawesome6/css/solid.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Customer/fonts/elegant_font/HTML_CSS/style.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/Customer/fonts/et-line-font/style.css")" rel="stylesheet" />
 </head>
 <body>
 
