--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -100,7 +100,94 @@
             </div>
         </section>
 
-        <section class="no-top" id="epics">
+        <section class="no-top bg-warning" id="epics">
+            <div class="container bg-white pt-5 g-4 mt-100 sm-mt-0 z-1000 " style="border-radius: 15px;">
+                <div class="row justify-content-center mb-lg-5 ">
+                    <div class="col-12 text-center ">
+                        <div class="subtitle s2 wow fadeInUp mb-3">Our Features</div>
+
+                        <h2 style="word-spacing: 0.35em;">Exploring East Asian Culture</h2>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center pb-5">
+                    <div class="col-12 col-lg-10 col-xl-8">
+                        <!-- Adjust the column sizes as needed -->
+                        <div class="row">
+                            <!-- Left side: Image -->
+                            <div class="col-12 col-md-6 col-lg-5 p-auto">
+                                <img src="@Url.Content("~/Content/Customer/images/services/11.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            </div>
+
+                            <!-- Right side: Text -->
+                            <div class="col-12 col-md-6 col-lg-7">
+                                <h3>East Asian Melodies</h3>
+                                <hr class="s2">
+                                <p>Experience the vibrant celebrations of East Asian cultures right here in Melbourne. Join us in festivals that tell tales of heritage and unity, connecting the East with the West.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center pb-5">
+                    <div class="col-12 col-lg-10 col-xl-8">
+                        <!-- Adjust the column sizes as needed -->
+                        <div class="row">
+                            <!-- Left side: Image -->
+                            <div class="col-12 col-md-6 col-lg-7">
+                                <h3>Discover East Asia</h3>
+                                <hr class="s2">
+                                <p>Dive into the rich history and traditions of East Asia through educational workshops and events. Gain insights, understand values, and break down cultural barriers.</p>
+                            </div>
+
+                            <!-- Right side: Text -->
+
+                            <div class="col-12 col-md-6 col-lg-5 p-auto">
+                                <img src="@Url.Content("~/Content/Customer/images/services/22.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center pb-5">
+                    <div class="col-12 col-lg-10 col-xl-8">
+                        <!-- Adjust the column sizes as needed -->
+                        <div class="row">
+                            <!-- Left side: Image -->
+                            <div class="col-12 col-md-6 col-lg-5 p-auto">
+                                <img src="@Url.Content("~/Content/Customer/images/services/33.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            </div>
+
+                            <!-- Right side: Text -->
+                            <div class="col-12 col-md-6 col-lg-7">
+                                <h3>Voices of East Asia</h3>
+                                <hr class="s2">
+                                <p>Listen to the authentic stories of East Asian immigrants in Melbourne. This anonymous space allows for the sharing of personal journeys, cultural memories, and the creation of a shared understanding.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center pb-5">
+                    <div class="col-12 col-lg-10 col-xl-8">
+                        <!-- Adjust the column sizes as needed -->
+                        <div class="row">
+                            <!-- Left side: Image -->
+                            <div class="col-12 col-md-6 col-lg-7">
+                                <h3>Cultural Insights              </h3>
+                                <hr class="s2">
+                                <p>Explore data-driven insights into the lives of East Asian communities in Melbourne. Understand the patterns, challenges, and successes of integration, aiming for a society free from discrimination.</p>
+                            </div>
+
+                            <!-- Right side: Text -->
+
+                            <div class="col-12 col-md-6 col-lg-5 p-auto">
+                                <img src="@Url.Content("~/Content/Customer/images/services/44.webp")" class="img-fullwidth rounded-20 mb20" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        @*<section class="no-top" id="epics">
             <div class="container">
                 <div class="row g-4 mt-100 sm-mt-0 z-1000">
                     <div class="spacer-single d-lg-none d-sm-block"></div>
@@ -141,7 +228,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>*@
 
         <section class="jarallax text-light">
             <img src="@Url.Content("~/Content/Customer/images/background/2.webp")" class="jarallax-img" alt="">
@@ -149,8 +236,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="subtitle s2 wow fadeInUp mb-3">Our Mission</div>
-                        <h2 class="mb20 wow fadeInUp" data-wow-delay=".2s">Driven by the challenges faced by East Asian communities in Melbourne, we're committed to promoting multicultural understanding and respect. Our goal is to educate, unite, and empower, helping to diminish discrimination and celebrate our city's diverse heritage.</h2>
-                        @*<a class="btn-main" href="contact.html">Let's Work Together</a>*@
+                        <h2 class="mb20 wow fadeInUp" style="word-spacing: 0.25em;" data-wow-delay=".2s">
+                            We aim to promote multicultural respect and unity in Melbourne, empowering East Asian communities to overcome discrimination and celebrate diversity.
+                        </h2>
                     </div>
                 </div>
             </div>
@@ -161,7 +249,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="subtitle s2 wow fadeInUp mb-3">Explore Cultures</div>
-                        <h2 class="wow fadeInUp" data-wow-delay=".2s">Select your Jam</h2>
+                        <h2 class="wow fadeInUp" style="word-spacing: 0.25em;" data-wow-delay=".2s">Dive into Cultural Diversity</h2>
                     </div>
                 </div>
 
